# venvpy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: mypy.yml  pylint.yml  tests.yml
tests/: test_venpy.py
venvpy/: __init__.py  factory.py
