[tool.poetry]
name = "venvpy"
version = "0.1.0"
description = "Mix multiple python versions in the same runtime"
authors = ["Jean Carlo Jimenez Giraldo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pylint = "^2.14.5"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
